syntax = "proto3";

package messaging;

service MapleService {
  rpc Connect(connectRequest) returns (connectResponse);
  rpc EventsStream(stream RequestEvent) returns (stream ResponseEvent);
}

message ChatMessage {
  int32 id = 1;
  string message = 2;
}

message RequestEvent {
  oneof event {
    RequestDropItem dropItem = 1;
  }
}

message ResponseEvent {
  oneof event {
    ResponseDropItem dropItem = 1;
  }
}

message RequestDropItem {
  int32 id = 1; //0 mesos
  int32 count = 2;
  int32 owner = 3;
  Point start = 4;
  int32 invtype = 6; // todo refactor to enum later
  int32 slotid = 7;
}

message ResponseDropItem {
  int32 oid = 1;
  int32 id = 2; //0 mesos
  Point start = 3;
  int32 owner = 4;
}

enum DropState {
    DROPPED = 0;
    FLOATING = 1;
    PICKEDUP = 2;
}

message Point {
  float x = 1;
  float y = 2;
}

message connectRequest {

}

message connectResponse {

}

message Empty {}